[package]
name = "simple-cookie"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Jayshua Nelson <me@jayshuanelson.com>"]
repository = "https://github.com/Jayshua/simple-cookie"
readme = "README.md"
description = "Functions for creating and parsing signed & encrypted cookies."

[dependencies]
aes-gcm = { version = "0.10.1", features = ["aes"] }
rand = { version = "0.8.5", default-features = false, optional = true }

[features]
default = ["std", "rand"]
std = []
rand = ["rand/std", "rand/std_rng"]

[dev-dependencies]
base64 = { version = "0.21.0" }
oorandom = { version = "11.1.3" }
rand = { version = "0.8.5", features = ["std", "std_rng"] }